--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		
 		<div class="logo">
 		
-			<h1><a href="#">GONZO</a></h1>
+			<h1><a href="#">GONlass="bdr"><a class="pdgZO</a></h1>
 		
 		</div>
 
@@ -27,7 +27,7 @@
 	<div class="navigation">
 		<ul>
 			<li><a class="active" href="index.html">HOME</a></li>
-			<li><a href="about.html">ABOUT</a></li>
+			<li><a href="about.hlass="bdr"><a class="pdgtml">ABOUT</a></li>
 			<li><a href="picture.html">PICTURES</a></li>
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>					
 		</ul>
@@ -39,7 +39,7 @@
 		<div id="slider">
 			<ul>				
 				<li><a href="#"><img src="images/slide1.png" alt="" /></a></li>
-				<li><a href="#"><img src="images/slide2.png" alt="" /></a></li>
+				<li><a href=lass="bdr"><a class="pdg"#"><img src="images/slide2.png" alt="" /></a></li>
 				<li><a href="#"><img src="images/slide3.png" alt="" /></a></li>
 			</ul>
 		</div>
@@ -60,7 +60,7 @@
 
 <!--==========================Scripts Starts=============================-->
 	<script type="text/javascript" src="js/jquery.js"></script>	
-	<script type="text/javascript" src="js/easySlider1.7.js"></script>
+	<script type="text/javalass="bdr"><a class="pdgscript" src="js/easySlider1.7.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){	
 			$("#slider").easySlider({
